fix hover effect blurring issue

--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -77,7 +77,7 @@ button.btn img {
 
 .primary:hover,
 .secondary:hover {
-  transform: scale(1.02);
+  transform: translateX(3px);
 }
 
 .secondary {
